The following was done to the index.html file: - Document title and main heading is full name - Add a professional image of myself - Description list with the following information: . Student number . Program name . This course code and name this course . One interesting fact about me

--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jerome</title>
+    <title>Jerome Hunter</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Jerome Hunter</h1>
+    </header>
+    <main>
+        <img src="images/Jerome Photo Passport Style.png" alt="Image of Jerome Hunter">
+        <dl>
+            <dt><strong>Student Number:</strong></dt>
+            <dd>041151798</dd>
+            <dt><strong>Program:</strong></dt>
+            <dd>Interactive Media Design (IMD)</dd>
+            <dt><strong>Something Interesting About Me:</strong></dt>
+            <dd>I'm a Jamaican creative with 15+ years in advertising, blending intuition, innovation, and rhythm to craft ideas that resonate like a timeless reggae beat.</dd>
+        </dl>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
